--- a/html/_/index.html
+++ b/html/_/index.html
@@ -582,7 +582,7 @@ crossorigin=""/>
     <div class="mousenotavailable">
       <div class = "row mt-3">
         <img class="col-6" src = "../img/Pourunhomme.jpg" alt="Miss Dior - Dior (1947)" title="Miss Dior - Dior (1947)">
-        <a href="https://olfatheque.com/olfatheque.login?redirect_after_login=/fiche-parfum-1424.php?term=Pour%20un%20Homme">
+        <a href="https://olfatheque.com/olfatheque.login?redirect_after_login=/fiche-parfum-1424.php?term=Pour%20un%20Homme" target="_BLANK">
               <div class = "details">
                 <h1 class="titledetails">POUR UN HOMME</h1>
                 <br>
@@ -599,7 +599,7 @@ crossorigin=""/>
       <div class="col-12 mt-0 powered">Powered by <a href="../supporters/cinquieme_sens.html"> Cinquième Sens</a></div>
       <div class = "row mt-3">
         <img class="col-6" src = "../img/Pourunhomme.jpg" alt="Miss Dior - Dior (1947)" title="Miss Dior - Dior (1947)">
-        <a href="https://olfatheque.com/olfatheque.login?redirect_after_login=/fiche-parfum-1424.php?term=Pour%20un%20Homme">
+        <a href="https://olfatheque.com/olfatheque.login?redirect_after_login=/fiche-parfum-1424.php?term=Pour%20un%20Homme" target="_BLANK">
               <div class = "details">
                 <h1 class="titledetails">POUR UN HOMME</h1>
                 <br>
@@ -616,7 +616,7 @@ crossorigin=""/>
       <div class="col-12 mt-0 powered">Powered by <a href="../supporters/cinquieme_sens.html"> Cinquième Sens</a></div>
       <div class = "row mt-3">
         <img class="col-6" src = "../img/Pourunhomme.jpg" alt="Miss Dior - Dior (1947)" title="Miss Dior - Dior (1947)">
-        <a href="https://olfatheque.com/olfatheque.login?redirect_after_login=/fiche-parfum-1424.php?term=Pour%20un%20Homme">
+        <a href="https://olfatheque.com/olfatheque.login?redirect_after_login=/fiche-parfum-1424.php?term=Pour%20un%20Homme" target="_BLANK">
               <div class = "details">
                 <h1 class="titledetails">POUR UN HOMME</h1>
                 <br>
@@ -633,7 +633,7 @@ crossorigin=""/>
       <div class="col-12 mt-0 powered">Powered by <a href="../supporters/cinquieme_sens.html"> Cinquième Sens</a></div>
       <div class = "row mt-3">
         <img class="col-6" src = "../img/Pourunhomme.jpg" alt="Miss Dior - Dior (1947)" title="Miss Dior - Dior (1947)">
-        <a href="https://olfatheque.com/olfatheque.login?redirect_after_login=/fiche-parfum-1424.php?term=Pour%20un%20Homme">
+        <a href="https://olfatheque.com/olfatheque.login?redirect_after_login=/fiche-parfum-1424.php?term=Pour%20un%20Homme" target="_BLANK">
               <div class = "details">
                 <h1 class="titledetails">POUR UN HOMME</h1>
                 <br>
@@ -650,7 +650,7 @@ crossorigin=""/>
       <div class="col-12 mt-0 powered">Powered by <a href="../supporters/cinquieme_sens.html"> Cinquième Sens</a></div>
       <div class = "row mt-3">
         <img class="col-6" src = "../img/Pourunhomme.jpg" alt="Miss Dior - Dior (1947)" title="Miss Dior - Dior (1947)">
-        <a href="https://olfatheque.com/olfatheque.login?redirect_after_login=/fiche-parfum-1424.php?term=Pour%20un%20Homme">
+        <a href="https://olfatheque.com/olfatheque.login?redirect_after_login=/fiche-parfum-1424.php?term=Pour%20un%20Homme" target="_BLANK">
               <div class = "details">
                 <h1 class="titledetails">POUR UN HOMME</h1>
                 <br>
@@ -667,7 +667,7 @@ crossorigin=""/>
       <div class="col-12 mt-0 powered">Powered by <a href="../supporters/cinquieme_sens.html"> Cinquième Sens</a></div>
       <div class = "row mt-3">
         <img class="col-6" src = "../img/Pourunhomme.jpg" alt="Miss Dior - Dior (1947)" title="Miss Dior - Dior (1947)">
-        <a href="https://olfatheque.com/olfatheque.login?redirect_after_login=/fiche-parfum-1424.php?term=Pour%20un%20Homme">
+        <a href="https://olfatheque.com/olfatheque.login?redirect_after_login=/fiche-parfum-1424.php?term=Pour%20un%20Homme" target="_BLANK">
               <div class = "details">
                 <h1 class="titledetails">POUR UN HOMME</h1>
                 <br>
@@ -684,7 +684,7 @@ crossorigin=""/>
       <div class="col-12 mt-0 powered">Powered by <a href="../supporters/cinquieme_sens.html"> Cinquième Sens</a></div>
       <div class = "row mt-3">
         <img class="col-6" src = "../img/Pourunhomme.jpg" alt="Miss Dior - Dior (1947)" title="Miss Dior - Dior (1947)">
-        <a href="https://olfatheque.com/olfatheque.login?redirect_after_login=/fiche-parfum-1424.php?term=Pour%20un%20Homme">
+        <a href="https://olfatheque.com/olfatheque.login?redirect_after_login=/fiche-parfum-1424.php?term=Pour%20un%20Homme" target="_BLANK">
               <div class = "details">
                 <h1 class="titledetails">POUR UN HOMME</h1>
                 <br>
@@ -701,7 +701,7 @@ crossorigin=""/>
       <div class="col-12 mt-0 powered">Powered by <a href="../supporters/cinquieme_sens.html"> Cinquième Sens</a></div>
       <div class = "row mt-3">
         <img class="col-6" src = "../img/Pourunhomme.jpg" alt="Miss Dior - Dior (1947)" title="Miss Dior - Dior (1947)">
-        <a href="https://olfatheque.com/olfatheque.login?redirect_after_login=/fiche-parfum-1424.php?term=Pour%20un%20Homme">
+        <a href="https://olfatheque.com/olfatheque.login?redirect_after_login=/fiche-parfum-1424.php?term=Pour%20un%20Homme" target="_BLANK">
               <div class = "details">
                 <h1 class="titledetails">POUR UN HOMME</h1>
                 <br>
@@ -725,7 +725,7 @@ crossorigin=""/>
       <div class = "row mt-3">
         <div class = "frame col-3">
           <img src = "../img/Pourunhomme.jpg" alt="Miss Dior - Dior (1947)" title="Miss Dior - Dior (1947)">
-          <a href="https://olfatheque.com/olfatheque.login?redirect_after_login=/fiche-parfum-1424.php?term=Pour%20un%20Homme">
+          <a href="https://olfatheque.com/olfatheque.login?redirect_after_login=/fiche-parfum-1424.php?term=Pour%20un%20Homme" target="_BLANK">
               <div class = "details">
                 <h1 class="titledetails">POUR UN HOMME</h1>
                 <br>
@@ -741,7 +741,7 @@ crossorigin=""/>
         </div> 
         <div class = "frame col-3">
           <img src = "../img/Pourunhomme.jpg" alt="Miss Dior - Dior (1947)" title="Miss Dior - Dior (1947)">
-          <a href="https://olfatheque.com/olfatheque.login?redirect_after_login=/fiche-parfum-1424.php?term=Pour%20un%20Homme">
+          <a href="https://olfatheque.com/olfatheque.login?redirect_after_login=/fiche-parfum-1424.php?term=Pour%20un%20Homme" target="_BLANK">
               <div class = "details">
                 <h1 class="titledetails">POUR UN HOMME</h1>
                 <br>
@@ -757,7 +757,7 @@ crossorigin=""/>
         </div> 
         <div class = "frame col-3">
           <img src = "../img/Pourunhomme.jpg" alt="Miss Dior - Dior (1947)" title="Miss Dior - Dior (1947)">
-          <a href="https://olfatheque.com/olfatheque.login?redirect_after_login=/fiche-parfum-1424.php?term=Pour%20un%20Homme">
+          <a href="https://olfatheque.com/olfatheque.login?redirect_after_login=/fiche-parfum-1424.php?term=Pour%20un%20Homme" target="_BLANK">
               <div class = "details">
                 <h1 class="titledetails">POUR UN HOMME</h1>
                 <br>
@@ -773,7 +773,7 @@ crossorigin=""/>
         </div>
         <div class = "frame col-3">
           <img src = "../img/Pourunhomme.jpg" alt="Miss Dior - Dior (1947)" title="Miss Dior - Dior (1947)">
-          <a href="https://olfatheque.com/olfatheque.login?redirect_after_login=/fiche-parfum-1424.php?term=Pour%20un%20Homme">
+          <a href="https://olfatheque.com/olfatheque.login?redirect_after_login=/fiche-parfum-1424.php?term=Pour%20un%20Homme" target="_BLANK">
               <div class = "details">
                 <h1 class="titledetails">POUR UN HOMME</h1>
                 <br>
@@ -798,7 +798,7 @@ crossorigin=""/>
       <div class = "mt-5 row">
         <div class = "frame col-3">
           <img src = "../img/Pourunhomme.jpg" alt="Miss Dior - Dior (1947)" title="Miss Dior - Dior (1947)">
-          <a href="https://olfatheque.com/olfatheque.login?redirect_after_login=/fiche-parfum-1424.php?term=Pour%20un%20Homme">
+          <a href="https://olfatheque.com/olfatheque.login?redirect_after_login=/fiche-parfum-1424.php?term=Pour%20un%20Homme" target="_BLANK">
               <div class = "details">
                 <h1 class="titledetails">POUR UN HOMME</h1>
                 <br>
@@ -814,7 +814,7 @@ crossorigin=""/>
         </div> 
         <div class = "frame col-3">
           <img src = "../img/Pourunhomme.jpg" alt="Miss Dior - Dior (1947)" title="Miss Dior - Dior (1947)">
-          <a href="https://olfatheque.com/olfatheque.login?redirect_after_login=/fiche-parfum-1424.php?term=Pour%20un%20Homme">
+          <a href="https://olfatheque.com/olfatheque.login?redirect_after_login=/fiche-parfum-1424.php?term=Pour%20un%20Homme" target="_BLANK">
               <div class = "details">
                 <h1 class="titledetails">POUR UN HOMME</h1>
                 <br>
@@ -830,7 +830,7 @@ crossorigin=""/>
         </div> 
         <div class = "frame col-3">
           <img src = "../img/Pourunhomme.jpg" alt="Miss Dior - Dior (1947)" title="Miss Dior - Dior (1947)">
-            <a href="https://olfatheque.com/olfatheque.login?redirect_after_login=/fiche-parfum-1424.php?term=Pour%20un%20Homme">
+            <a href="https://olfatheque.com/olfatheque.login?redirect_after_login=/fiche-parfum-1424.php?term=Pour%20un%20Homme" target="_BLANK">
               <div class = "details">
                 <h1 class="titledetails">POUR UN HOMME</h1>
                 <br>
@@ -846,7 +846,7 @@ crossorigin=""/>
         </div>
         <div class = "frame col-3">
           <img src = "../img/Pourunhomme.jpg" alt="Miss Dior - Dior (1947)" title="Miss Dior - Dior (1947)">
-          <a href="https://olfatheque.com/olfatheque.login?redirect_after_login=/fiche-parfum-1424.php?term=Pour%20un%20Homme">
+          <a href="https://olfatheque.com/olfatheque.login?redirect_after_login=/fiche-parfum-1424.php?term=Pour%20un%20Homme" target="_BLANK">
               <div class = "details">
                 <h1 class="titledetails">POUR UN HOMME</h1>
                 <br>
