--- a/html/_/index.html
+++ b/html/_/index.html
@@ -174,11 +174,11 @@ crossorigin=""/>
 
 </main>
 
-<div id="RGPD_warning" class="col-sm-10 col-md-10 col-lg-10 col-xl-10">
+<div id="RGPD_warning" class="col-sm-9 col-9">
     <div class="row blockrgpd"></div>
     <div id="contenant" class="row">
       <div class=" col-offset-1 col-9 textRGPD" >
-        <p lang="fr"><i>Notre site internet utilise des cookies à des fins de statistiques, de perfomances et de sécurité. Ces données anonymes nous permettent de vous offrir une expérience de navigation optimale. Vous pouvez toutefois désactiver les cookies dans les paramètres de votre navigateur.</i></p>
+        <p lang="fr"><i>Notre site internet utilise des cookies à des fins de statistiques, de performances et de sécurité. Ces données anonymes nous permettent de vous offrir une expérience de navigation optimale. Vous pouvez toutefois désactiver les cookies dans les paramètres de votre navigateur.</i></p>
         <p lang="en"><i>Our website is using cookies for statistics, performance and security. These anonymous data allow us to give you an optimal navigation experience. You still can disable the cookies in your navigator’s parameters.</i></p>
       </div> 
       <div class=" col-offset-2 col-3 boutonRGPD">
@@ -194,7 +194,7 @@ crossorigin=""/>
     </div>
     <div class="row blockrgpd"></div>
   </div>
-  
+
 <!-- MODAL DESCRIPTEURS -->
 <div class="modal fade" tabindex="-1" role="dialog" id="DescripteurModal">
   <div class="modal-dialog modal-lg" role="document">
