--- a/html/_/index.html
+++ b/html/_/index.html
@@ -177,7 +177,10 @@ crossorigin=""/>
 <div id="RGPD_warning" class="col-sm-9 col-5">
     <div class="row blockrgpd"></div>
     <div id="contenant" class="row">
-      <div class=" col-offset-1 col-9 textRGPD" >
+      <div class="col-offset-1 col-9 cookiesimg">
+        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.svgrepo.com%2Fsvg%2F30963%2Fcookie&psig=AOvVaw0pcRIzhuq5cWFDFyWlqP7x&ust=1593714869183000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCIiNmtjYrOoCFQAAAAAdAAAAABAY">
+      </div>
+      <div class="col-offset-1 col-9 textRGPD" >
         <p lang="fr"><i>Notre site internet utilise des cookies à des fins de statistiques, de performances et de sécurité. Ces données anonymes nous permettent de vous offrir une expérience de navigation optimale. Vous pouvez toutefois désactiver les cookies dans les paramètres de votre navigateur.</i></p>
         <p lang="en"><i>Our website is using cookies for statistics, performance and security. These anonymous data allow us to give you an optimal navigation experience. You still can disable the cookies in your navigator’s parameters.</i></p>
       </div> 
