--- a/html/_/index.html
+++ b/html/_/index.html
@@ -177,8 +177,8 @@ crossorigin=""/>
 <div id="RGPD_warning" class="col-sm-9 col-5">
     <div class="row blockrgpd"></div>
     <div id="contenant" class="row">
-      <div class="col-offset-1 col-9 cookiesimg">
-        <img src="../img/cookies.png">
+      <div class="col-offset-1 col-9">
+        <img class="cookiesimg" src="../img/cookies.png" style="size">
       </div>
       <div class="col-offset-1 col-9 textRGPD" >
         <p lang="fr"><i>Notre site internet utilise des cookies à des fins de statistiques, de performances et de sécurité. Ces données anonymes nous permettent de vous offrir une expérience de navigation optimale. Vous pouvez toutefois désactiver les cookies dans les paramètres de votre navigateur.</i></p>
