--- a/html/_/index.html
+++ b/html/_/index.html
@@ -177,25 +177,24 @@ crossorigin=""/>
 <div id="RGPD_warning" class="col-sm-9 col-5">
     <div class="row blockrgpd"></div>
     <div id="contenant" class="row">
-      <div class="col-offset-1 col-9">
-        <img class="cookiesimg" src="../img/cookies.png" style="size">
+      <div class="col-3">
+        <img class="cookiesimg" src="../img/cookies.png">
       </div>
-      <div class="col-offset-1 col-9 textRGPD" >
+      <div class="offset-1 col-7 textRGPD" >
         <p lang="fr"><i>Notre site internet utilise des cookies à des fins de statistiques, de performances et de sécurité. Ces données anonymes nous permettent de vous offrir une expérience de navigation optimale. Vous pouvez toutefois désactiver les cookies dans les paramètres de votre navigateur.</i></p>
         <p lang="en"><i>Our website is using cookies for statistics, performance and security. These anonymous data allow us to give you an optimal navigation experience. You still can disable the cookies in your navigator’s parameters.</i></p>
-      </div> 
-      <div class=" col-offset-2 col-3 boutonRGPD">
-        <button class="btn btn-success" id="cookie_please">
-          <span lang="fr">Accepter et continuer</span>
-          <span lang="en">Accept and continue</span>
-        </button>
-        <button class="btn btn-default btn-md NONRGPD" id="no_cookie">
-          <span lang="fr">Non</span>
-          <span lang="en">No</span>
-        </button>
+        <p>
+          <button class="btn btn-success" id="cookie_please">
+            <span lang="fr">Accepter et continuer</span>
+            <span lang="en">Accept and continue</span>
+          </button>
+          <button class="btn btn-default btn-md NONRGPD" id="no_cookie">
+            <span lang="fr">Non</span>
+            <span lang="en">No</span>
+          </button>
+        </p>
       </div>
     </div>
-    <div class="row blockrgpd"></div>
   </div>
 
 <!-- MODAL DESCRIPTEURS -->
