--- a/html/_/index.html
+++ b/html/_/index.html
@@ -165,16 +165,25 @@ crossorigin=""/>
 
 
 <div id="mapblock" class="col-md-9 order-md-first p-0  h-100  fill2">
-  <div id="you_can_zoom">
+  
+  <div id="map" class="h-100-with-padding-60px-before-md"></div>
+</div>
+
+</div>
+</div>
+
+</main>
+
+<!--<div id="you_can_zoom">
           <button type="button" class="close float-right" data-dismiss="modal" aria-label="Close" id="close_you_can_zoom" style="margin:2%;"><span aria-hidden="true">&times;</span></button>
     <p lang="fr">Zoomez et cliquez sur les descripteurs ou les ingrédients souhaités</p>
     <p lang="en">Zoom and click on the wanted descriptor or ingredient</p>
-  </div>
+  </div>-->
   <div id="RGPD_warning" class="col-sm-10 col-md-10 col-lg-10 col-xl-10">
     <div class="row blockrgpd"></div>
     <div id="contenant" class="row">
       <div class=" col-offset-1 col-9 textRGPD" >
-        <p lang="fr"><i>Notre site internet utilise des cookies à des fins de statistiques, de perfomances et de sécurité. Ces données anonymes nous permettent de vous offrir une expérience de navigation optimale. Vous pouvez toutefois désactiver les cookies dans les paramètres de votre navigateur.</i></p>
+        <p lang="fr"><i>Notre site internet utilise des cookies à des fins de statistiques, de performances et de sécurité. Ces données anonymes nous permettent de vous offrir une expérience de navigation optimale. Vous pouvez toutefois désactiver les cookies dans les paramètres de votre navigateur.</i></p>
         <p lang="en"><i>Our website is using cookies for statistics, performance and security. These anonymous data allow us to give you an optimal navigation experience. You still can disable the cookies in your navigator’s parameters.</i></p>
       </div> 
       <div class=" col-offset-2 col-3 boutonRGPD">
@@ -188,16 +197,7 @@ crossorigin=""/>
         </button>
       </div>
     </div>
-    <div class="row blockrgpd"></div>
   </div>
-  <div id="map" class="h-100-with-padding-60px-before-md"></div>
-</div>
-
-</div>
-</div>
-
-</main>
-
 
 <!-- MODAL DESCRIPTEURS -->
 <div class="modal fade" tabindex="-1" role="dialog" id="DescripteurModal">
