--- a/html/_/index.html
+++ b/html/_/index.html
@@ -179,14 +179,14 @@ crossorigin=""/>
     <p lang="fr">Zoomez et cliquez sur les descripteurs ou les ingrédients souhaités</p>
     <p lang="en">Zoom and click on the wanted descriptor or ingredient</p>
   </div>-->
-  <div id="RGPD_warning" class="col-sm-10 col-md-10 col-lg-10 col-xl-10">
+  <div id="RGPD_warning" class="col-sm-10 col-8">
     <div class="row blockrgpd"></div>
     <div id="contenant" class="row">
       <div class=" col-offset-1 col-9 textRGPD" >
         <p lang="fr"><i>Notre site internet utilise des cookies à des fins de statistiques, de performances et de sécurité. Ces données anonymes nous permettent de vous offrir une expérience de navigation optimale. Vous pouvez toutefois désactiver les cookies dans les paramètres de votre navigateur.</i></p>
         <p lang="en"><i>Our website is using cookies for statistics, performance and security. These anonymous data allow us to give you an optimal navigation experience. You still can disable the cookies in your navigator’s parameters.</i></p>
       </div> 
-      <div class=" col-offset-2 col-3 boutonRGPD">
+      <div class=" col-offset-2 col-3 boutonRGPD" style="">
         <button class="btn btn-success" id="cookie_please">
           <span lang="fr">Accepter et continuer</span>
           <span lang="en">Accept and continue</span>
