--- a/html/_/support.html
+++ b/html/_/support.html
@@ -253,7 +253,7 @@ crossorigin=""/>
             <li>TRANI Christelle -<span lang="fr" class="profession"> (Parfumeur chez IPRA Fragrances)</span><span lang="en" class="profession"> (Perfumer at IPRA Fragrances)</span></li>
             <li>VILLEPREUX Céline -<span lang="fr" class="profession"> (Experte Matières Premières – Firmenich)</span><span lang="en" class="profession"> (Raw Materials Expert at Firmenich)</span></li>
             <li class="nouveausupporter">ZAROKIAN Cécile -<span lang="fr" class="profession"> (CEO et Parfumeur indépendant chez Cécile Zarokian Parfumeur)</span><span lang="en" class="profession"> (CEO / Independant perfumer at Cécile Zarokian Perfumer)</span></li>
-            <li class="nouveausupporter">ZIMER Pauline -<span lang="fr" class="profession"> (Apprenti parfumeur chez Cécile Zarokian Parfumeur)</span><span lang="en" class="profession"> (Trainee Parfumer at Cécile Zarokian Perfumer)</span></li>
+            <li class="nouveausupporter">ZIMER Pauline -<span lang="fr" class="profession"> (Apprentie parfumeur chez Cécile Zarokian Parfumeur)</span><span lang="en" class="profession"> (Trainee Parfumer at Cécile Zarokian Perfumer)</span></li>
           </ul>
         </p>
         <p class="mt-3 m-0 p-0 text-center">
