--- a/html/_/nouveaute.html
+++ b/html/_/nouveaute.html
@@ -177,6 +177,24 @@ crossorigin=""/>
     <ul>
       <li>
         <div class="content">
+          <h2 id="heading22"><span lang="fr">05 Juillet 2020</span><span lang="en">5<sup>th</sup> july 2020</span>
+            <br><span lang="fr" class="ajoutMP">Ajout de 5 nouvelles matières premières</span><span lang="en" class="ajoutMP">5 new ingredients added </span>
+          </h2>
+          <p>
+              <a class="interpop"  href="../ingredients/Gamma-Dodecalactone__Dodecalactone-Gamma.html"><span lang="en">Gamma-Dodecalactone (CAS N°: 2305-05-7)</span><span lang="fr">Dodecalactone-Gamma (CAS N°: 2305-05-7)</span></a>
+              <br><a class="interpop"  href="../ingredients/Delta-Undecalactone__Undecalactone-Delta.html"><span lang="en">Delta-Undecalactone (CAS N°: 710-04-3)</span><span lang="fr">Undecalactone-Delta (CAS N°: 710-04-3)</span></a>
+              <br><a class="interpop"  href="../ingredients/Gamma-Heptalactone__Heptalactone-Gamma.html"><span lang="en">Gamma-Heptalactone (CAS N°: 105-21-5)</span><span lang="fr">Heptalactone-Gamma (CAS N°: 105-21-5)</span></a>
+              <br><a class="interpop"  href="../ingredients/Black_Spruce_EO__Epinette_Noire_HE.html"><span lang="en">Black Spruce EO (CAS N°: 91722-19-9)</span><span lang="fr">Epinette Noire HE (CAS N°: 91722-19-9)</span></a>
+              <br><a class="interpop"  href="../ingredients/Murraya_EO__Murraya_HE.html"><span lang="en">Murraya EO (CAS N°: 876068-15-4)</span><span lang="fr">Murraya HE (CAS N°: 876068-15-4)</span></a>
+          </p>
+          <p>
+              <span lang="fr">Optimisation du groupe des lactones Fruité > Lactonique > ... </span>
+              <span lang="en">ISIPCA school became the first sponsor of ScenTree ! Thanks ! </span>
+          </p>
+        </div>
+      </li>
+      <li>
+        <div class="content">
           <h2 id="heading22"><span lang="fr">21 juin 2020</span><span lang="en">21<sup>st</sup> june 2020</span></h2>
           <p>
             <span lang="fr">Quosentis rejoint ScenTree ! Merci ! </span>
