--- a/html/_/nouveaute.html
+++ b/html/_/nouveaute.html
@@ -188,7 +188,7 @@ crossorigin=""/>
               <br><a class="interpop"  href="../ingredients/Murraya_EO__Murraya_HE.html"><span lang="en">Murraya EO (CAS N°: 876068-15-4)</span><span lang="fr">Murraya HE (CAS N°: 876068-15-4)</span></a>
           </p>
           <p>
-              <span lang="fr">Optimisation du groupe des lactones Fruité > Lactonique > ... </span>
+              <span lang="fr">Optimisation du groupe des lactones (Fruité > Lactonique > ...) </span>
               <span lang="en">ISIPCA school became the first sponsor of ScenTree ! Thanks ! </span>
           </p>
         </div>
