--- a/html/_/nouveaute.html
+++ b/html/_/nouveaute.html
@@ -189,7 +189,7 @@ crossorigin=""/>
           </p>
           <p>
               <span lang="fr">Optimisation du groupe des lactones (Fruité > Lactonique > ...) </span>
-              <span lang="en">ISIPCA school became the first sponsor of ScenTree ! Thanks ! </span>
+              <span lang="en">Lactone group optimisation (Fruity > Lactonic > ...) </span>
           </p>
         </div>
       </li>
