--- a/html/_/index.html
+++ b/html/_/index.html
@@ -127,19 +127,17 @@ crossorigin=""/>
       <span lang="fr"><b>Les nouveautés !   </b></span>
       <span lang="en"><b>News from ScenTree !  </b></span>
       <span><i class="fas fa-info-circle notifi2"></i></span>
-    </a>
-    <br>
-    <a class="col-12  mt-3 mb-3 text-in-color-brown save_map_status_on_leaving text-center" role="button" href="/newsletter/newsletter/subscribe">
-      <span lang="fr"><b>Découvrez notre newsletter</b></span>
-      <span lang="en"><b>Discover our newsletter</b></span>
-    </a>
+    </a>  
   </div>    
 </div>
 
 <div class="row h-15 align-items-end">
   <div class="container-fluid text-center">
   <div class="col-12 p-0 mt-5 mb-1">
-        <a class="col-12 mt-5 p-0 btn btn-sm save_map_status_on_leaving text-center" role="button" href="../_/Sources.html">
+        <a class="col-12 mt-3 p-0 btn btn-sm save_map_status_on_leaving text-center" role="button" href="/newsletter/newsletter/subscribe">
+          <span lang="fr"><b>Newsletter</b></span><span lang="en"><b>Newsletter</b></span>
+        </a>
+        <a class="col-12 m-0 p-0 btn btn-sm save_map_status_on_leaving text-center" role="button" href="../_/Sources.html">
           <span lang="fr">Sources</span><span lang="en">Sources</span>
         </a>
         <a class="col-12 m-0 p-0 btn btn-sm save_map_status_on_leaving text-center" role="button" href="../_/contacts.html">
