--- a/html/_/index.html
+++ b/html/_/index.html
@@ -102,14 +102,14 @@ crossorigin=""/>
 </div>
 
 <div class="row align-items-start">
-  <div class="col-12 align-items-center m-0">
+  <!--<div class="col-12 align-items-center m-0">
     <div class="font-weight-bold text-size-1-1vw pb-1 d-none d-sm-none d-md-block"><span lang="fr">Trouver une matière première&nbsp;:&nbsp;</span><span lang="en">Find a raw material&nbsp;:&nbsp;</span></div>
   </div>
-  <!--Recherche -->
+  Recherche -->
   <div class="col-12 text-center align-items-start">
   <form autocomplete="off" id="searchForm">
-    <input lang="fr" type="search" class="searchinput  my-search-bar  form-control" placeholder="Nom (botanique) ou N°CAS..." />
-    <input lang="en" type="search" class="searchinput  my-search-bar  form-control" placeholder="Name (botanical) or CAS N°..." />
+    <input lang="fr" type="search" class="searchinput  my-search-bar  form-control" placeholder="Trouver une matière première" />
+    <input lang="en" type="search" class="searchinput  my-search-bar  form-control" placeholder="Find a raw material" />
   </form>
   </div>
 </div>
