--- a/html/_/index.html
+++ b/html/_/index.html
@@ -93,17 +93,15 @@ crossorigin=""/>
     <button class="btn to_french_button float-right" type="button"><img src="../img/france.png" alt="ScenTree en français"  class="imgfr"></button>
   </div>
   <div class="col-12 text-center">
-    <h1>
       <a class="btn save_map_status_on_leaving" role="button" href="../_/menu.html">
         <img class="img-fluid logomenu boutonclickable pl-2 d-block max-height-120px" src="../img/logon.png" alt="ScenTree, la nouvelle encyclopédie des ingrédients de parfum. " title="ScenTree, la nouvelle encyclopédie des ingrédients de parfum. ">
       </a>
-    </h1>
   </div>
 </div>
 
 <div class="row align-items-start">
   <div class="col-12 align-items-center m-0">
-    <div class="text-size-1-1vw pb-1 d-none d-sm-none d-md-block">Exploring the branch of perfumed ingredients</div>
+    <h1 class="pb-1 d-none d-sm-none d-md-block" style="font-size: 1em;">Exploring the branch of perfumed ingredients</h1>
   </div>
   <!--Recherche -->
   <div class="col-12 text-center align-items-start">
