--- a/html/_/index.html
+++ b/html/_/index.html
@@ -99,10 +99,11 @@ crossorigin=""/>
   </div>
 </div>
 
+<div class="col-12 m-0 text-center">
+    <h1 class="mb-1 pb-1 d-none d-sm-none d-md-block" style="font-size: 0.8em;">Exploring the branch of perfumed ingredients</h1>
+</div>
+
 <div class="row align-items-start">
-  <div class="col-12 align-items-center m-0">
-    <h1 class="pb-1 d-none d-sm-none d-md-block" style="font-size: 0.8em;">Exploring the branch of perfumed ingredients</h1>
-  </div>
   <!--Recherche -->
   <div class="col-12 text-center align-items-start">
   <form autocomplete="off" id="searchForm">
