--- a/html/_/index.html
+++ b/html/_/index.html
@@ -99,8 +99,8 @@ crossorigin=""/>
   </div>
 </div>
 
-<div class="col-12 m-0 text-center">
-    <h1 class="mb-3 pb-3 d-none d-sm-none d-md-block" style="font-size: 0.75em;">Exploring the branch of perfumed ingredients</h1>
+<div class="col-12 m-0 text-center" style="vertical-align: middle;">
+    <h1 class="mb-2 d-none d-sm-none d-md-block" style="font-size: 0.75em;">Exploring the branch of perfumed ingredients</h1>
 </div>
 
 <div class="row align-items-start">
