--- a/html/_/index.html
+++ b/html/_/index.html
@@ -103,7 +103,7 @@ crossorigin=""/>
     <h1 class="mb-2 d-none d-sm-none d-md-block" style="font-size: 0.75em;">Exploring the branch of perfumed ingredients</h1>
 </div>
 
-<div class="row align-items-start">
+<div class="row align-items-start mb-2">
   <!--Recherche -->
   <div class="col-12 text-center align-items-start">
   <form autocomplete="off" id="searchForm">
@@ -116,7 +116,7 @@ crossorigin=""/>
 <div class="row align-items-start text-center">
   <!--Boutons support et news -->
   <div class="col">
-    <a class="btn mt-4 mb-3 text-in-color-brown save_map_status_on_leaving they_support_us__link" role="button" href="../_/support.html">
+    <a class="btn mt-3 mb-3 text-in-color-brown save_map_status_on_leaving they_support_us__link" role="button" href="../_/support.html">
       <span lang="fr"><b>Ils nous soutiennent   </b></span>
       <span lang="en"><b>They support us  </b></span>
       <span><i class="fas fa-info-circle notifi1"></i></span>
