--- a/html/_/index.html
+++ b/html/_/index.html
@@ -111,7 +111,7 @@ crossorigin=""/>
 </div>
 
 <div class="col-12 mb-2 text-center" style="vertical-align: middle;">
-    <h1 class="mb-2 d-none d-sm-none d-md-block" style="font-size: 0.75em;">Exploring the branch of perfumed ingredients</h1>
+    <h1 class="mb-2 d-none d-sm-none d-md-block slogan">Exploring the branch of perfumed ingredients</h1>
 </div>
 
 <div class="row align-items-start mt-3 mb-2">
