--- a/html/_/index.html
+++ b/html/_/index.html
@@ -1887,6 +1887,15 @@ crossorigin=""/>
               </h3>
             </p>
             <p>
+              <h2 class="item d-inline">
+                <span lang="fr">Autres noms <sup class="fas fa-question-circle iconetab" title="Il arrive souvent qu'une même matière première soit appelée différement par les sociétés la commercialisant. La liste ci-après donne les autres noms également rencontrés."></sup> :</span>
+                <span lang="en">other names <sup class="fas fa-question-circle iconetab" title="It happens that the same raw material is named differently by the companies marketing it. The list below gives the other names also encountered."></sup> :</span>
+              </h2>
+              <h3 class="textitem d-inline">
+                <span id="modalbody-autresnoms"></span>
+              </h3>
+            </p>
+            <p>
               <h2 class="item d-inline text-size-16px">
                 <span lang="fr">Commentaires et anecdotes <sup class="fas fa-question-circle iconetab" title="Autres commentaires sur la matière première"></sup> :</span>
                 <span lang="en">Other comments <sup class="fas fa-question-circle iconetab" title="Additional remarks concerning the raw material."></sup> : </span>
