--- a/html/_/index.html
+++ b/html/_/index.html
@@ -1892,7 +1892,7 @@ crossorigin=""/>
                 <span lang="en">other names <sup class="fas fa-question-circle iconetab" title="It happens that the same raw material is named differently by the companies marketing it. The list below gives the other names also encountered."></sup> :</span>
               </h2>
               <h3 class="textitem d-inline">
-                <span id="modalbody-autresnoms"></span>
+                <span id="modalbody-synonymes"></span>
               </h3>
             </p>
             <p>
