--- a/html/_/support.html
+++ b/html/_/support.html
@@ -27,6 +27,17 @@
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.5.1/dist/leaflet.css"
 integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
 crossorigin=""/>
+<!-- Hotjar Tracking Code for www.scentree.co -->
+<script>
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:1894594,hjsv:6};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
 </head>
 
 <body class="d-flex flex-column h-100">
@@ -56,8 +67,6 @@ crossorigin=""/>
     <a class="dropdown-item btn save_map_status_on_leaving petitbtn mb-1" role="button" href="../_/legal.html"><span lang="fr">Mentions légales</span><span lang="en">Legal Mentions</span></a>
     <a class="fab fa-linkedin ml-2" href="https://www.linkedin.com/company/scentree/" target="_blank" title="Découvrez notre page Linkedin"></a>
     <a class="fab fa-instagram ml-3" href="https://www.instagram.com/scentree.co/" target="_blank" title="Découvrez notre page Instagram"></a>
-    <a class="fab fa-facebook-square ml-3" href="https://www.facebook.com/scentree/" target="_blank" title="Découvrez notre page Facebook"></a>
-    <a class="fab fa-youtube ml-3" href="https://www.youtube.com/channel/UCZaUDfZPrkZHHqq1FmLL6FA" target="_blank" title="Découvrez notre chaine Youtube"></a>
   </div>
   <span><i class="fas fa-info-circle notifi3"></i></span>
 </div>
@@ -84,9 +93,10 @@ crossorigin=""/>
     <button class="btn to_french_button float-right" type="button"><img src="../img/france.png" alt="ScenTree en français"  class="imgfr"></button>
   </div>
   <div class="col-12 text-center">
-    <h1>
       <a class="btn save_map_status_on_leaving" role="button" href="../_/menu.html"><img class="img-fluid logomenu boutonclickable pl-2 d-block max-height-120px" src="../img/logon.png" alt="ScenTree, la nouvelle encyclopédie des ingrédients de parfum." title="ScenTree, la nouvelle encyclopédie des ingrédients de parfum. "></a>
-    </h1>
+  </div>
+  <div class="col-12 mb-2 text-center" style="vertical-align: middle;">
+    <h1 class="d-none d-sm-none d-md-block slogan">Exploring the branch of perfumed ingredients</h1>
   </div>
 </div>
 
