--- a/html/_/support.html
+++ b/html/_/support.html
@@ -94,7 +94,9 @@ crossorigin=""/>
     <button class="btn to_french_button float-right" type="button"><img src="../img/france.png" alt="ScenTree en français"  class="imgfr"></button>
   </div>
   <div class="col-12 text-center">
-      <a class="btn save_map_status_on_leaving" role="button" href="../_/menu.html"><img class="img-fluid logomenu boutonclickable pl-2 d-block max-height-120px" src="../img/logon.png" alt="ScenTree, la nouvelle encyclopédie des ingrédients de parfum." title="ScenTree, la nouvelle encyclopédie des ingrédients de parfum. "></a>
+      <a class="btn save_map_status_on_leaving" role="button" href="../_/menu.html">
+        <img class="img-fluid logomenu boutonclickable pl-2 d-block max-height-120px" src="../img/logon.png" alt="ScenTree, la nouvelle encyclopédie des ingrédients de parfum." title="ScenTree, la nouvelle encyclopédie des ingrédients de parfum. ">
+      </a>
   </div>
   <div class="col-12 mb-2 text-center" style="vertical-align: middle;">
     <h1 class="d-none d-sm-none d-md-block slogan">Exploring the branch of perfumed ingredients</h1>
