--- a/html/_/support.html
+++ b/html/_/support.html
@@ -104,7 +104,7 @@ crossorigin=""/>
   <h1 class="d-none d-sm-none d-md-block slogan">Exploring the branch of perfumed ingredients</h1>
 </div>
 
-<div class="row align-items-start text-center mt-3 mb-3">
+<div class="row align-items-center text-center mt-3 mb-3">
   <!--Recherche -->
   <a class="btn text-in-color-brown" role="button" href="../_/index.html"><span lang="fr"><b>Revenir à la classification </b></span><span lang="en"><b>Come back to the classification </b></span></a>
 </div>
