--- a/html/_/support.html
+++ b/html/_/support.html
@@ -105,8 +105,9 @@ crossorigin=""/>
 </div>
 
 <div class="row text-center mt-3 mb-3" style="align-items: center;">
-  <!--Recherche -->
+  <div class="col-12 text-center">
   <a class="btn text-in-color-brown" role="button" href="../_/index.html"><span lang="fr"><b>Revenir à la classification </b></span><span lang="en"><b>Come back to the classification </b></span></a>
+  </div>
 </div>
 
 <div class="row align-items-start text-center">
