--- a/html/_/support.html
+++ b/html/_/support.html
@@ -124,7 +124,7 @@ crossorigin=""/>
 <div class="row h-15 align-items-end">
   <div class="container-fluid text-center">
   <div class="col-12 p-0 mb-1">
-        <a class="col-12  mt-1 p-0 btn btn-sm save_map_status_on_leaving text-center" role="button" href="/newsletter/newsletter/subscribe">
+        <a class="col-12  m-0 p-0 btn btn-sm save_map_status_on_leaving text-center" role="button" href="/newsletter/newsletter/subscribe">
           <span lang="fr">Newsletter</span><span lang="en">Newsletter</span>
         </a>
         <a class="col-12 m-0 p-0 btn btn-sm save_map_status_on_leaving text-center" role="button" href="../_/Sources.html">
@@ -136,12 +136,12 @@ crossorigin=""/>
         <a class="col-12 m-0 p-0 btn btn-sm save_map_status_on_leaving text-center" role="button" href="../_/legal.html">
          <span lang="fr">Mentions Légales</span><span lang="en">Legal Mentions</span>
         </a>
-      <div class="col-12 mb-1 p-0 text-center">
+      <div class="col-12 mt-1 text-center">
           <a class="fab fa-linkedin ml-2" href="https://www.linkedin.com/company/scentree/" target="_blank" title="Découvrez notre page Linkedin"></a>
           <a class="fab fa-instagram ml-3" href="https://www.instagram.com/scentree.co/" target="_blank" title="Découvrez notre page Instagram"></a>
       </div>
     </div>
-   <div class="copyright row  d-none d-sm-none d-md-block">
+   <div class="copyright row mt-2 d-none d-sm-none d-md-block">
         <sup>©</sup> Copyright 2019-2020 |  ScenTree SAS  | All Rights Reserved |
    </div>
   </div>
