--- a/html/_/index.html
+++ b/html/_/index.html
@@ -147,7 +147,7 @@ crossorigin=""/>
   <div class="container-fluid text-center">
   <div class="col-12 p-0 mb-1">
         <a class="col-12 m-0 p-0 btn btn-sm save_map_status_on_leaving text-center" role="button" href="/newsletter/newsletter/subscribe">
-          <span lang="fr">Newsletter</span><span lang="en"><b>Newsletter</b></span>
+          <span lang="fr">Newsletter</span><span lang="en">Newsletter</span>
         </a>
         <a class="col-12 m-0 p-0 btn btn-sm save_map_status_on_leaving text-center" role="button" href="../_/Sources.html">
           <span lang="fr">Sources</span><span lang="en">Sources</span>
