--- a/html/_/support.html
+++ b/html/_/support.html
@@ -154,22 +154,24 @@ crossorigin=""/>
 <div id="mapblock" class="col-md-9 order-md-first p-0  h-100  fill2">
 
 
-<div id="RGPD_warning" class="col-sm-10 col-md-10 col-lg-10 col-xl-10">
-<div id="blanc1" class="row blockrgpd"></div>
-<div id="contenant" class="row">
-<div class=" col-offset-1 col-9 textRGPD" >
-  <p lang="fr"><i>Notre site internet utilise des cookies à des fins de statistiques, de perfomances et de sécurité. Ces données anonymes nous permettent de vous offrir une expérience de navigation optimale. Vous pouvez toutefois désactiver les cookies dans les paramètres de votre navigateur.</i></p>
-  <p lang="en"><i>Our website is using cookies for statistics, performance and security. These anonymous data allow us to give you an optimal navigation experience. You still can disable the cookies in your navigator’s parameters.</i></p>
-</div> 
-<div class=" col-offset-2 col-3 boutonRGPD">
-  <button class="btn btn-success" id="cookie_please">
-    <span lang="fr">Accepter et continuer</span><span lang="en">Accept and continue</span>
-  </button><button class="btn btn-default btn-md NONRGPD" id="no_cookie">
-    <span lang="fr">Non</span><span lang="en">No</span>
-  </button>
-</div>
-</div>
-<div id="blanc1" class="row blockrgpd"></div>
+<div id="RGPD_warning" class="col-sm-10 col-8">
+    <div class="row blockrgpd"></div>
+    <div id="contenant" class="row">
+      <div class=" col-offset-1 col-9 textRGPD" >
+        <p lang="fr"><i>Notre site internet utilise des cookies à des fins de statistiques, de performances et de sécurité. Ces données anonymes nous permettent de vous offrir une expérience de navigation optimale. Vous pouvez toutefois désactiver les cookies dans les paramètres de votre navigateur.</i></p>
+        <p lang="en"><i>Our website is using cookies for statistics, performance and security. These anonymous data allow us to give you an optimal navigation experience. You still can disable the cookies in your navigator’s parameters.</i></p>
+      </div> 
+      <div class=" col-offset-2 col-3 boutonRGPD" style="">
+        <button class="btn btn-success" id="cookie_please">
+          <span lang="fr">Accepter et continuer</span>
+          <span lang="en">Accept and continue</span>
+        </button>
+        <button class="btn btn-default btn-md NONRGPD" id="no_cookie">
+          <span lang="fr">Non</span>
+          <span lang="en">No</span>
+        </button>
+      </div>
+    </div>
 </div>
 <!--<div id="map" class="h-100-with-padding-60px-before-md"></div>-->
 
