--- a/html/_/support.html
+++ b/html/_/support.html
@@ -162,9 +162,9 @@ crossorigin=""/>
         <p lang="en"><i>Our website is using cookies for statistics, performance and security. These anonymous data allow us to give you an optimal navigation experience. You still can disable the cookies in your navigator’s parameters.</i></p>
       </div> 
       <div class=" col-offset-2 col-3 col-xs-12 boutonRGPD" style="">
-        <button class="btn btn-success" id="cookie_please">
-          <span lang="fr">Accepter et continuer</span>
-          <span lang="en">Accept and continue</span>
+        <button class="btn btn-success" style="background-color:#D64E26; color:black;"  id="cookie_please">
+          <span lang="fr">Accepter tout</span>
+          <span lang="en">Accept all</span>
         </button>
         <button class="btn btn-default btn-md NONRGPD" id="no_cookie">
           <span lang="fr">Non</span>
