--- a/html/_/support.html
+++ b/html/_/support.html
@@ -162,7 +162,7 @@ crossorigin=""/>
         <p lang="en"><i>Our website is using cookies for statistics, performance and security. These anonymous data allow us to give you an optimal navigation experience. You still can disable the cookies in your navigator’s parameters.</i></p>
       </div> 
       <div class=" col-offset-2 col-3 col-xs-12 boutonRGPD" style="">
-        <button class="btn btn-success" style="background-color:#D64E26; color:black;"  id="cookie_please">
+        <button class="btn" style="background-color:#D64E26; color:black;"  id="cookie_please">
           <span lang="fr">Accepter tout</span>
           <span lang="en">Accept all</span>
         </button>
