--- a/html/_/index.html
+++ b/html/_/index.html
@@ -192,14 +192,14 @@ crossorigin=""/>
   <div id="RGPD_warning" class="col-sm-10 col-8">
     <div class="row blockrgpd"></div>
     <div id="contenant" class="row">
-      <div class=" col-offset-1 col-9 textRGPD" >
-        <p lang="fr"><i>Notre site internet utilise des cookies à des fins de statistiques, de performances et de sécurité. Ces données anonymes nous permettent de vous offrir une expérience de navigation optimale. Vous pouvez toutefois désactiver les cookies dans les paramètres de votre navigateur.</i></p>
-        <p lang="en"><i>Our website is using cookies for statistics, performance and security. These anonymous data allow us to give you an optimal navigation experience. You still can disable the cookies in your navigator’s parameters.</i></p>
+      <div class=" col-offset-1 col-9 col-xs-12 textRGPD" >
+        <p lang="fr">Notre site internet utilise des cookies à des fins de statistiques, de performances et de sécurité. Ces données anonymes nous permettent de vous offrir une expérience de navigation optimale. Vous pouvez toutefois désactiver les cookies dans les paramètres de votre navigateur.</p>
+        <p lang="en">Our website is using cookies for statistics, performance and security. These anonymous data allow us to give you an optimal navigation experience. You still can disable the cookies in your navigator’s parameters.</p>
       </div> 
-      <div class=" col-offset-2 col-3 boutonRGPD" style="">
-        <button class="btn btn-success" id="cookie_please">
-          <span lang="fr">Accepter et continuer</span>
-          <span lang="en">Accept and continue</span>
+      <div class=" col-offset-2 col-3 col-xs-12 boutonRGPD" style="">
+        <button class="btn" style="background-color:#D64E26; color:black;"  id="cookie_please">
+          <span lang="fr">Accepter tout</span>
+          <span lang="en">Accept all</span>
         </button>
         <button class="btn btn-default btn-md NONRGPD" id="no_cookie">
           <span lang="fr">Non</span>
@@ -207,7 +207,7 @@ crossorigin=""/>
         </button>
       </div>
     </div>
-  </div>
+</div>
 
 <!-- MODAL DESCRIPTEURS -->
 <div class="modal fade" tabindex="-1" role="dialog" id="DescripteurModal">
